--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/xe
 spring.datasource.username=conimal
 spring.datasource.password=conimal
+
+mybatis.mapper-locations=mappers/*.xml
